--- a/LinkedinAdmin/RMIAdminServer/.classpath
+++ b/LinkedinAdmin/RMIAdminServer/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry excluding="res/" kind="src" path="src"/>
+	<classpathentry excluding="res/|main/resources/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/res"/>
 	<classpathentry kind="lib" path="src/mysql-connector-java-8.0.12.jar"/>
+	<classpathentry kind="lib" path="src/res/logback-classic-1.3.0-alpha4.jar"/>
+	<classpathentry kind="lib" path="src/res/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="src/res/logback-core-1.2.3.jar"/>
+	<classpathentry kind="lib" path="src/res/slf4j-simple-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
